add refresh and submite button functionality

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -40,6 +40,8 @@ body {
 .score-lists {
   margin-top: 1rem;
   border: 2px solid #161b22;
+  max-height: 13rem;
+  overflow: auto;
 }
 
 .score-lists div {
